# tauri-plugin-minecraft-launcher

./: .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  package.json
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: bun.lockb  package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: list_fabric_loaders.toml  list_fabric_versions.toml  list_forge_loaders.toml  list_forge_versions.toml  list_quilt_loaders.toml  list_quilt_versions.toml  list_vanilla_versions.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs
src/models/: fabric.rs  forge.rs  mod.rs  quilt.rs  vanilla.rs
