[package]
name = "tauri-plugin-minecraft-launcher"
version = "0.1.0"
authors = ["Miate"]
description = ""
edition = "2021"
rust-version = "1.80"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-minecraft-launcher"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"
lyceris = "1.1.2"
tokio = { version = "1.44.1", features = ["process"] }

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
